--- a/src/assets/scss/views/myLoan/MyLoanDetailAuto.scss
+++ b/src/assets/scss/views/myLoan/MyLoanDetailAuto.scss
@@ -2,6 +2,10 @@
 @import '@/assets/scss/components/import/logs.scss';
 @import '@/assets/scss/components/import/icon-list.scss';
 
+.key-value-opener {
+  width: 16px;
+  height: 16px;
+}
 .contents {
   margin-top: 16px;
 }
