--- a/src/assets/scss/views/myLoan/MyLoanDetailIntermediate.scss
+++ b/src/assets/scss/views/myLoan/MyLoanDetailIntermediate.scss
@@ -1,6 +1,10 @@
 @import '@/assets/scss/components/import/inline-alert.scss';
 @import '@/assets/scss/components/import/logs.scss';
 
+.key-value-opener {
+  width: 16px;
+  height: 16px;
+}
 .contents {
   margin-top: 16px;
 }
