--- a/src/assets/scss/components/import/nav-menu.scss
+++ b/src/assets/scss/components/import/nav-menu.scss
@@ -1,53 +1,69 @@
+div.nav-menu__link {
+  cursor: default;
+}
+
 .nav-menu {
   &__list {
     @include reset-list;
   }
 
   &__item + &__item {
-    margin-top: 32px;
+    margin-top: 16px;
   }
 
   &__link {
-    display: block;
-    padding: 0 4px;
+    @include reset-button;
+    color: inherit;
     text-decoration: none;
+    text-align: left;
+    box-sizing: border-box;
+    width: 100%;
+    flex: 0 1 auto;
+    min-width: 0;
+    display: block;
+    padding: 8px 4px;
     @include font-size-default(16);
     font-weight: 500;
-    color: inherit;
   }
 
-  &__accordion {
-    &-head {
-      display: flex;
-      align-items: center;
-    }
-
-    &-title {
-      flex: 1;
-      min-width: 0;
-      font-weight: 500;
-    }
-
-    &-opener {
-      &:before {
-        padding: 0;
-        top: 0;
-        left: 0;
-      }
-    }
-  }
-
-  &--depth {
-    margin-top: 8px;
-
-    .nav-menu__item + .nav-menu__item {
-      margin-top: 0;
-    }
+  &__head {
+    position: relative;
+    display: flex;
+    align-items: center;
 
     .nav-menu__link {
-      padding: 8px 16px 6px 16px;
-      @include font-size-default(14);
-      font-weight: 400;
+      width: auto;
+    }
+  }
+
+  &__right {
+    flex: none;
+    margin-left: auto;
+    padding-left: 16px;
+  }
+
+  &__opener {
+    position: static;
+
+    &:before {
+      padding: 0;
+      top: 0;
+      left: 0;
+    }
+  }
+
+  &__list--depth {
+    > .nav-menu__item {
+      & + .nav-menu__item {
+        margin-top: 0;
+      }
+
+      > .nav-menu__link,
+      > .nav-menu__head .nav-menu__link {
+        padding: 7px 16px;
+        @include font-size-default(14);
+        font-weight: 400;
+      }
     }
   }
 }
