--- a/src/assets/scss/components/import/switch-list.scss
+++ b/src/assets/scss/components/import/switch-list.scss
@@ -1,3 +1,7 @@
+div.switch-list__title {
+  cursor: default;
+}
+
 .switch-list {
   @include reset-list;
 
@@ -12,11 +16,20 @@
   }
 
   &__title {
+    @include reset-button;
+    color: inherit;
+    text-decoration: none;
+    text-align: left;
+    box-sizing: border-box;
     flex: 0 1 auto;
     min-width: 0;
     margin: 0;
     @include font-size-default(16);
     font-weight: 500;
+
+    &:only-child {
+      flex: 1;
+    }
   }
 
   &__right {
@@ -33,6 +46,7 @@
   }
 
   &__tip {
+    flex: none;
     margin-left: 4px;
   }
 }
