--- a/src/assets/scss/views/inventory-finance/InventoryFinanceEarlyList.scss
+++ b/src/assets/scss/views/inventory-finance/InventoryFinanceEarlyList.scss
@@ -1,6 +1,10 @@
 @import '@/assets/scss/components/import/empty.scss';
 @import '@/assets/scss/components/import/inline-alert.scss';
 
+.key-value-opener {
+  width: 16px;
+  height: 16px;
+}
 .account-contents {
-  margin-top: 16px;
+  padding-top: 16px;
 }
