--- a/src/assets/scss/views/myLoan/MyLoanDetailMedicalInstalment.scss
+++ b/src/assets/scss/views/myLoan/MyLoanDetailMedicalInstalment.scss
@@ -1,5 +1,9 @@
 @import '@/assets/scss/components/import/logs.scss';
 
+.key-value-opener {
+  width: 16px;
+  height: 16px;
+}
 .contents {
   margin-top: 16px;
 }
