--- a/src/assets/scss/views/myLoan/LayerMyLoanOnlineContractAccountAuth.scss
+++ b/src/assets/scss/views/myLoan/LayerMyLoanOnlineContractAccountAuth.scss
@@ -1,3 +1,12 @@
+@import '@/assets/scss/components/import/input-timer.scss';
+
 .img-account {
   margin: 0 auto;
+  max-width: 280px;
+
+  svg {
+    display: block;
+    width: 100%;
+    height: auto;
+  }
 }
