--- a/src/assets/scss/views/sign/SignIn.scss
+++ b/src/assets/scss/views/sign/SignIn.scss
@@ -1,3 +1,5 @@
+@import '@/assets/scss/components/import/join.scss';
+
 .illust {
   padding-bottom: 40px;
 }
@@ -50,39 +52,5 @@
     display: block;
     @include font-size-default(13);
     font-weight: 300;
-  }
-}
-
-.join {
-  margin-top: 24px;
-
-  &__inner {
-    display: flex;
-    align-items: center;
-  }
-
-  &__icon {
-    flex: none;
-    width: 36px;
-    height: 36px;
-
-    svg {
-      display: block;
-      width: 100%;
-      height: 100%;
-    }
-  }
-
-  &__title {
-    flex: 1;
-    min-width: 0;
-    margin: 0 8px;
-    @include font-size-default(13);
-    font-weight: 500;
-  }
-
-  &__link {
-    flex: none;
-    width: auto;
   }
 }
