--- a/src/assets/scss/components/ui/button/FilterButton.scss
+++ b/src/assets/scss/components/ui/button/FilterButton.scss
@@ -1,39 +1,74 @@
 .filter-button {
-  border-radius: 0;
-  margin: 0;
-  padding: 0;
-  border: none;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  cursor: pointer;
-  overflow: visible;
+  @include reset-button;
+  position: relative;
   display: block;
   width: 24px;
   height: 24px;
-  position: relative;
-  background: url('@/assets/images/icon/filter.svg') no-repeat 0 0 / 100%;
 
   &::before {
     content: '';
     display: block;
-    padding: 10px;
+    padding: 8px;
     width: 100%;
     height: 100%;
     position: absolute;
-    top: -10px;
-    left: -10px;
+    top: -8px;
+    left: -8px;
     background-color: rgba(0, 0, 0, 0);
   }
-  &--type {
-    &-on {
-      background-image: url('@/assets/images/icon/filter-on.svg');
-    }
-    &-on-blue {
-      background-image: url('@/assets/images/icon/filter-on-blue.svg');
-    }
-  }
+
   &__text {
     @include for-a11y;
+  }
+
+  &__icon {
+    &,
+    svg {
+      display: block;
+      width: 100%;
+      height: 100%;
+    }
+
+    svg {
+      * {
+        fill: $color-gray-70;
+      }
+    }
+  }
+
+  &--active {
+    &::after {
+      content: '';
+      display: block;
+      position: absolute;
+      top: 0;
+      right: 1px;
+      width: 4px;
+      height: 4px;
+      border-radius: 50%;
+      background-color: $color-semantic-essential;
+    }
+
+    .filter-button__icon {
+      svg {
+        * {
+          fill: $color-green-50;
+        }
+      }
+    }
+  }
+
+  &--theme {
+    &-secondary {
+      &.filter-button--active {
+        .filter-button__icon {
+          svg {
+            * {
+              fill: $color-blue-50;
+            }
+          }
+        }
+      }
+    }
   }
 }
