--- a/src/assets/scss/views/lmBlog/LMBlogStatusInquiry.scss
+++ b/src/assets/scss/views/lmBlog/LMBlogStatusInquiry.scss
@@ -3,7 +3,7 @@
 .status-inquiry {
   @include reset-list;
   display: flex;
-  padding: 20px 16px;
+  padding: 0 16px;
   background: #f9f9f9;
 
   &__item {
@@ -12,15 +12,45 @@
     text-align: center;
   }
 
-  &__number {
-    color: $color-green-50;
-    @include font-size-default(16);
-  }
+  &__category {
+    position: relative;
+    display: block;
+    width: 100%;
+    padding: 20px 0;
+    border: none;
+    background: none;
+    box-sizing: border-box;
+    cursor: pointer;
 
-  &__text {
-    margin-top: 2px;
-    color: $color-gray-90;
-    @include font-size-default(12);
+    &__number {
+      display: block;
+      color: $color-green-50;
+      @include font-size-default(16);
+    }
+
+    &__text {
+      display: block;
+      margin-top: 2px;
+      color: $color-gray-60;
+      @include font-size-default(12);
+    }
+
+    &.active {
+      &::after {
+        content: '';
+        display: block;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        height: 2px;
+        background-color: $color-black;
+      }
+
+      .status-inquiry__category__text {
+        color: $color-black;
+      }
+    }
   }
 }
 
