내대출 > 증명서 조회/발급 > 온라인 청구서 (일부) , 근저당설정 조회/해지, 만기안내장 작업중

--- a/src/assets/scss/views/uiGuide/GuideComponentModule.scss
+++ b/src/assets/scss/views/uiGuide/GuideComponentModule.scss
@@ -25,3 +25,4 @@
 @import '@/assets/scss/components/import/division-info.scss';
 @import '@/assets/scss/components/import/logs.scss';
 @import '@/assets/scss/components/import/rectal.scss';
+@import '@/assets/scss/components/import/bill-list.scss';
