BoxCheck 컴포넌트 contents속성 padding 디자인 가이드 수정

--- a/src/assets/scss/components/ui/form/BoxCheck.scss
+++ b/src/assets/scss/components/ui/form/BoxCheck.scss
@@ -208,7 +208,7 @@
 
   &--contents {
     .box-check__block {
-      padding: 15px 19px;
+      padding: 19px;
     }
 
     .box-check__label {
@@ -218,7 +218,7 @@
     .box-check__input {
       &:checked {
         & + .box-check__block {
-          padding: 14px 18px;
+          padding: 18px;
         }
       }
     }
