--- a/src/assets/scss/components/ui/form/BoxCheck.scss
+++ b/src/assets/scss/components/ui/form/BoxCheck.scss
@@ -28,12 +28,12 @@
 
   &__left {
     flex: none;
-    margin-right: 8px;
+    margin-right: 6px;
   }
 
   &__right {
     flex: none;
-    margin-left: 8px;
+    margin-left: 6px;
   }
 
   &__center {
@@ -61,16 +61,19 @@
   &__object {
     display: flex;
     align-items: center;
+    justify-content: center;
+    width: 24px;
     min-height: #{$line-height-default}em;
 
     &-inner {
       flex: none;
       position: relative;
-      width: 24px;
-      height: 24px;
+      width: 18px;
+      height: 18px;
       box-sizing: border-box;
       border: 1px solid $color-gray-30;
       border-radius: 50%;
+      background-color: $color-white;
       transition: border-color 0.2s, background-color 0.2s;
 
       &::before {
@@ -79,11 +82,11 @@
         position: absolute;
         top: 50%;
         left: 50%;
-        width: 12px;
-        height: 12px;
-        margin: -6px 0 0 -6px;
+        width: 8px;
+        height: 8px;
+        margin: -4px 0 0 -4px;
         border-radius: 50%;
-        background-color: #fff;
+        background-color: $color-white;
         opacity: 0;
         transition: opacity 0.2s;
       }
@@ -100,16 +103,6 @@
         * {
           fill: $color-gray-40;
           transition: fill 0.2s;
-        }
-      }
-    }
-  }
-
-  &--checkbox {
-    .box-check__object {
-      &-inner {
-        &::before {
-          display: none;
         }
       }
     }
@@ -134,12 +127,6 @@
 
             &::before {
               opacity: 1;
-            }
-
-            svg {
-              * {
-                fill: $color-white;
-              }
             }
           }
         }
@@ -172,14 +159,6 @@
             &::before {
               background-color: $color-gray-40;
             }
-
-            svg {
-              opacity: 0;
-
-              * {
-                fill: $color-gray-40;
-              }
-            }
           }
         }
       }
@@ -188,20 +167,85 @@
     &[disabled]:checked {
       & + .box-check__block {
         border-color: $color-gray-30;
-
-        .box-check__object {
-          &-inner {
-            svg {
-              opacity: 1;
-            }
-          }
-        }
       }
     }
 
     &[disabled]:active {
       & + .box-check__block {
         background-color: transparent;
+      }
+    }
+  }
+
+  &--checkbox {
+    .box-check__object {
+      &-inner {
+        border: none;
+        border-radius: 0;
+        background-color: transparent;
+        transition: none;
+
+        &::before {
+          display: none;
+        }
+      }
+    }
+
+    .box-check__input {
+      &:checked {
+        & + .box-check__block {
+          .box-check__object {
+            &-inner {
+              border-color: transparent;
+              background-color: transparent;
+
+              svg {
+                * {
+                  fill: $color-navy-50;
+                }
+              }
+            }
+          }
+        }
+      }
+
+      &[disabled] {
+        & + .box-check__block {
+          .box-check__object {
+            &-inner {
+              border-color: transparent;
+              background-color: transparent;
+
+              svg {
+                * {
+                  fill: $color-gray-20;
+                }
+              }
+            }
+          }
+        }
+      }
+
+      &[disabled]:checked {
+        & + .box-check__block {
+          .box-check__object {
+            &-inner {
+              svg {
+                opacity: 0.3;
+
+                * {
+                  fill: $color-navy-50;
+                }
+              }
+            }
+          }
+        }
+      }
+
+      &[disabled]:active {
+        & + .box-check__block {
+          background-color: transparent;
+        }
       }
     }
   }
