--- a/src/assets/scss/views/myLoan/LayerMyLoanPostMaturityRentalExtensionNotice.scss
+++ b/src/assets/scss/views/myLoan/LayerMyLoanPostMaturityRentalExtensionNotice.scss
@@ -1,6 +1,7 @@
 @import '@/assets/scss/components/import/basic-list.scss';
 @import '@/assets/scss/components/import/icon-list.scss';
 
-.bottom-list {
-  margin-bottom: 24px;
+.bottom {
+  margin-top: auto;
+  padding-top: 32px;
 }
