--- a/src/assets/scss/components/import/icon-buttons.scss
+++ b/src/assets/scss/components/import/icon-buttons.scss
@@ -66,7 +66,8 @@
     @include font-size-default(16);
   }
 
-  &__block:active {
+  &__block:active,
+  &__block:global(.is-selected) {
     &::after {
       opacity: 1;
     }
