배경 색상 케이스 추가 및 image-view.scss추가

--- a/src/assets/scss/components/ui/layer/FullPopup.scss
+++ b/src/assets/scss/components/ui/layer/FullPopup.scss
@@ -108,5 +108,10 @@
     &-secondary {
       background-color: $color-navy-05;
     }
+
+    &-tertiary {
+      color: $color-white;
+      background-color: $color-black;
+    }
   }
 }
