--- a/src/assets/scss/components/ui/layer/PopupButton.scss
+++ b/src/assets/scss/components/ui/layer/PopupButton.scss
@@ -35,4 +35,16 @@
   &__text {
     @include for-a11y;
   }
+
+  &--theme {
+    &-white {
+      .popup-button {
+        &__icon {
+          * {
+            fill: $color-white;
+          }
+        }
+      }
+    }
+  }
 }
