--- a/src/assets/scss/components/import/image-view.scss
+++ b/src/assets/scss/components/import/image-view.scss
@@ -1,13 +1,19 @@
 .image-view {
-  margin-left: -20px;
-  margin-right: -20px;
-  flex: 1;
-  display: flex;
-  align-items: center;
+  display: block;
 
   img {
     display: block;
     width: 100%;
     height: auto;
+  }
+
+  &--type {
+    &-full {
+      margin-left: -20px;
+      margin-right: -20px;
+      flex: 1;
+      display: flex;
+      align-items: center;
+    }
   }
 }
