KeyValue 컴포넌트 verticalAlign props 추가

--- a/src/assets/scss/components/ui/text/KeyValue.scss
+++ b/src/assets/scss/components/ui/text/KeyValue.scss
@@ -36,6 +36,14 @@
     }
   }
 
+  &--vertical-align {
+    &-center {
+      .key-value__item {
+        align-items: center;
+      }
+    }
+  }
+
   &--direction {
     &-vertical {
       .key-value__item {
