Car Thumb 사이즈 추가

--- a/src/assets/scss/components/ui/imageData/CarThumb.scss
+++ b/src/assets/scss/components/ui/imageData/CarThumb.scss
@@ -18,4 +18,16 @@
     height: 100%;
     transform: translateX(-50%);
   }
+
+  &--size {
+    &-medium {
+      width: 140px;
+
+      &::before {
+        content: '';
+        display: block;
+        padding-top: 71.43%;
+      }
+    }
+  }
 }
