손님용> 오토금융, 영업용(재고금융), 영업용(신차) 작업완료
- 손님용> 오토금융 > 차바구니
- 영업용(재고금융)> 대출신청 > 재고 신청
- 영업용(신차)> 신용동의 > 상담등록

--- a/src/assets/scss/views/inventoryFinance/InventoryFinanceStateList.scss
+++ b/src/assets/scss/views/inventoryFinance/InventoryFinanceStateList.scss
@@ -1,5 +1,13 @@
-.insurance-contents {
+.detail-contents {
   margin-top: 20px;
   border-top: 1px solid $color-gray-20;
   padding-top: 20px;
+}
+
+.nav {
+  margin-bottom: 30px;
+}
+
+.opener {
+  z-index: 15;
 }
