--- a/src/assets/scss/views/uiGuide/GuideComponentModule.scss
+++ b/src/assets/scss/views/uiGuide/GuideComponentModule.scss
@@ -27,3 +27,4 @@
 @import '@/assets/scss/components/import/rectal.scss';
 @import '@/assets/scss/components/import/bill-list.scss';
 @import '@/assets/scss/components/import/image-view.scss';
+@import '@/assets/scss/components/import/check-box-list.scss';
