--- a/src/assets/scss/views/inventoryFinanceCheck/LayerInventoryFinanceCheckViewImage.scss
+++ b/src/assets/scss/views/inventoryFinanceCheck/LayerInventoryFinanceCheckViewImage.scss
@@ -1,1 +1,13 @@
-@import '@/assets/scss/components/import/image-view.scss';
+.view {
+  flex: 1;
+  margin: -20px -20px -40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  img {
+    display: block;
+    width: 100%;
+    height: auto;
+  }
+}
