--- a/src/assets/scss/components/import/status-inquiry.scss
+++ b/src/assets/scss/components/import/status-inquiry.scss
@@ -4,6 +4,10 @@
   padding: 0 16px;
   background-color: $color-gray-05;
 
+  &--gap {
+    margin: 0 -20px;
+  }
+
   &__item {
     flex: 1;
     min-width: 0;
