--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -110,6 +110,10 @@ body,
       margin-left: 16px;
     }
 
+    & + &--regular {
+      margin-left: 12px;
+    }
+
     & + &--small-regular {
       margin-left: 6px;
     }
