--- a/src/assets/scss/views/inventoryFinance/InventoryFinanceStateList.scss
+++ b/src/assets/scss/views/inventoryFinance/InventoryFinanceStateList.scss
@@ -2,12 +2,12 @@
   margin-top: 20px;
   border-top: 1px solid $color-gray-20;
   padding-top: 20px;
-}
-
-.nav {
-  margin-bottom: 30px;
+  position: relative;
+  z-index: 20;
 }
 
 .opener {
-  z-index: 15;
+  width: 20px;
+  height: 20px;
+  z-index: 20;
 }
