--- a/src/assets/scss/views/myInfo/LayerMyInfoMarketPriceRealtyResult.scss
+++ b/src/assets/scss/views/myInfo/LayerMyInfoMarketPriceRealtyResult.scss
@@ -2,6 +2,7 @@
 @import '@/assets/scss/components/import/icon-list.scss';
 
 .head {
+  text-align: center;
   padding: 12px 0 8px 0;
 }
 
@@ -13,6 +14,10 @@
   svg {
     display: block;
     width: 100%;
-    height: auto;
+    height: 100%;
   }
+}
+
+.join {
+  margin-top: 0;
 }
