--- a/src/assets/scss/views/salesNewCar/SalesNewCarHome.scss
+++ b/src/assets/scss/views/salesNewCar/SalesNewCarHome.scss
@@ -1,7 +1,7 @@
 @import '@/assets/scss/components/import/division-info.scss';
 @import '@/assets/scss/components/import/status-inquiry.scss';
 @import '@/assets/scss/components/import/empty.scss';
-@import '@/assets/scss/components/ui/progress/MultiProgress.scss';
+@import '@/assets/scss/components/import/multi-progress.scss';
 
 .icon-profile {
   display: block;
@@ -26,4 +26,12 @@
   color: $color-gray-50;
   @include font-size-default(13);
   font-weight: 400;
+}
+
+.accordion-gap {
+  margin: 0 -19px;
+
+  .contents {
+    padding: 0 19px;
+  }
 }
