손님용 > 오토금융 > 견적조회(신차) 작업

--- a/src/assets/scss/views/uiGuide/GuideComponentModule.scss
+++ b/src/assets/scss/views/uiGuide/GuideComponentModule.scss
@@ -29,3 +29,5 @@
 @import '@/assets/scss/components/import/icon-buttons.scss';
 @import '@/assets/scss/components/import/image-view.scss';
 @import '@/assets/scss/components/import/add-button.scss';
+@import '@/assets/scss/components/import/loading-icon.scss';
+@import '@/assets/scss/components/import/colorchip.scss';
