--- a/src/assets/scss/components/ui/imageData/ColorChip.scss
+++ b/src/assets/scss/components/ui/imageData/ColorChip.scss
@@ -68,4 +68,22 @@
       border-radius: 4px;
     }
   }
+
+  &--type {
+    &-input {
+      .color-chip__inner,
+      .color-chip__inner:empty {
+        &::before {
+          content: '';
+          width: 40px;
+          height: 40px;
+          margin-top: -20px;
+          margin-left: -20px;
+          background: url('/src/assets/images/icon/input.svg') no-repeat 50% 50%/
+            100% 100%;
+          transform: none;
+        }
+      }
+    }
+  }
 }
