공통 텍스트 컬러 .color-gray-quaternary 클래스 추가
bill-list 에 contents 타입추가

--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -209,6 +209,9 @@ body,
 .color-gray-tertiary.color-gray-tertiary {
   color: $color-gray-80;
 }
+.color-gray-quaternary.color-gray-quaternary {
+  color: $color-gray-90;
+}
 .color-navy.color-navy {
   color: $color-navy-50;
 }
