--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -209,6 +209,12 @@ body,
 .color-gray-tertiary.color-gray-tertiary {
   color: $color-gray-80;
 }
+.color-gray-quaternary.color-gray-quaternary {
+  color: $color-gray-50;
+}
+.color-gray-quinary.color-gray-quinary {
+  color: $color-gray-40;
+}
 .color-navy.color-navy {
   color: $color-navy-50;
 }
