--- a/src/assets/scss/components/ui/button/BasicButton.scss
+++ b/src/assets/scss/components/ui/button/BasicButton.scss
@@ -256,6 +256,7 @@
     color: $color-gray-40;
     border-color: $color-gray-20;
     background-color: $color-gray-20;
+    cursor: default;
 
     .button__icon {
       svg {
