손님용 > 공통 > 서류등록 작업 및 자체 검수

--- a/src/assets/scss/views/uiGuide/GuideComponentModule.scss
+++ b/src/assets/scss/views/uiGuide/GuideComponentModule.scss
@@ -31,3 +31,5 @@
 @import '@/assets/scss/components/import/add-button.scss';
 @import '@/assets/scss/components/import/loading-icon.scss';
 @import '@/assets/scss/components/import/colorchip.scss';
+@import '@/assets/scss/components/import/upload-input.scss';
+@import '@/assets/scss/components/import/gallery-input.scss';
