--- a/src/assets/scss/components/import/board-detail.scss
+++ b/src/assets/scss/components/import/board-detail.scss
@@ -1,7 +1,10 @@
 .board-detail {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 
   &__head {
+    flex: none;
     padding-bottom: 30px;
     border-bottom: 1px solid $color-gray-20;
     margin-bottom: 30px;
@@ -25,10 +28,20 @@
   }
 
   &__contents {
+    flex: 1;
+    min-height: 0;
+
     &::before,
     &::after {
       content: '';
       display: table;
     }
+  }
+
+  &__foot {
+    flex: none;
+    padding-top: 24px;
+    border-top: 1px solid $color-gray-20;
+    margin-top: 30px;
   }
 }
