--- a/src/assets/scss/views/uiGuide/GuideComponentModule.scss
+++ b/src/assets/scss/views/uiGuide/GuideComponentModule.scss
@@ -31,3 +31,4 @@
 @import '@/assets/scss/components/import/add-button.scss';
 @import '@/assets/scss/components/import/qna-list.scss';
 @import '@/assets/scss/components/import/check-box-list.scss';
+@import '@/assets/scss/components/import/download-button.scss';
