--- a/src/assets/scss/views/uiGuide/GuideComponentModule.scss
+++ b/src/assets/scss/views/uiGuide/GuideComponentModule.scss
@@ -29,3 +29,4 @@
 @import '@/assets/scss/components/import/icon-buttons.scss';
 @import '@/assets/scss/components/import/image-view.scss';
 @import '@/assets/scss/components/import/add-button.scss';
+@import '@/assets/scss/components/import/term-list.scss';
