--- a/src/assets/scss/components/import/download.scss
+++ b/src/assets/scss/components/import/download.scss
@@ -1,7 +1,7 @@
 .download {
   position: relative;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
 
   &__block {
     flex: 1;
@@ -10,9 +10,10 @@
 
   &__button {
     flex: none;
-    width: 24px;
-    height: 24px;
-    margin-left: 8px;
+    width: 18px;
+    height: 18px;
+    padding: 3px 0;
+    margin-left: 4px;
 
     &::before {
       content: '';
@@ -30,6 +31,29 @@
       display: block;
       width: 100%;
       height: 100%;
+    }
+  }
+
+  &--align {
+    &-center {
+      align-items: center;
+    }
+  }
+
+  &--theme {
+    &-secondary {
+      .download__button {
+        width: 24px;
+        height: 24px;
+        padding: 0;
+        margin-left: 8px;
+
+        svg {
+          * {
+            fill: $color-gray-50;
+          }
+        }
+      }
     }
   }
 }
