--- a/src/assets/scss/views/company/CompanyPersonnelWelfare.scss
+++ b/src/assets/scss/views/company/CompanyPersonnelWelfare.scss
@@ -1,3 +1,6 @@
-@import '@/assets/scss/components/import/agree-list.scss';
 @import '@/assets/scss/components/import/basic-list.scss';
 @import '@/assets/scss/components/import/authority.scss';
+
+.basic-list {
+  margin-left: -7px;
+}
