--- a/src/assets/scss/components/import/icon-list.scss
+++ b/src/assets/scss/components/import/icon-list.scss
@@ -57,6 +57,11 @@ div.icon-list__block {
     margin-left: 16px;
   }
 
+  &__etc {
+    display: block;
+    margin-left: 16px;
+  }
+
   &__title {
     display: block;
     margin: 0;
