--- a/src/assets/scss/components/ui/tooltip/BasicTooltip.scss
+++ b/src/assets/scss/components/ui/tooltip/BasicTooltip.scss
@@ -42,6 +42,17 @@
     }
   }
 
+  &--fit {
+    .tooltip__bubble {
+      left: 0;
+      right: 0;
+    }
+
+    .tooltip__tail {
+      transform: translateX(20px);
+    }
+  }
+
   &:global(.is-show) {
     .tooltip__bubble {
       display: block;
