--- a/src/assets/scss/views/auto/LayerAutoEstimateConfirm.scss
+++ b/src/assets/scss/views/auto/LayerAutoEstimateConfirm.scss
@@ -1,1 +1,8 @@
 @import '@/assets/scss/components/import/basic-list.scss';
+@import '@/assets/scss/components/import/tooltip-section.scss';
+
+.icon {
+  display: block;
+  width: 18px;
+  height: 18px;
+}
