--- a/src/assets/scss/components/import/loading-icon.scss
+++ b/src/assets/scss/components/import/loading-icon.scss
@@ -1,12 +1,23 @@
 .loading-icon {
-  width: 10px;
-  height: 10px;
-  margin: 2px 1px 2px 3px;
-  border: 1.5px solid $color-white;
-  border-right-color: rgba($color-white, 0.5);
-  border-radius: 100%;
-  animation: spin 800ms infinite linear;
-  box-sizing: border-box;
+  position: relative;
+  width: 14px;
+  height: 14px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  &::before {
+    content: '';
+    display: block;
+    width: 10px;
+    height: 10px;
+    margin: 2px 1px 2px 3px;
+    border: 2px solid $color-white;
+    border-right-color: rgba($color-white, 0.5);
+    border-radius: 100%;
+    animation: spin 800ms infinite linear;
+    box-sizing: border-box;
+  }
 }
 
 @keyframes spin {
