--- a/src/assets/scss/components/import/upload-button.scss
+++ b/src/assets/scss/components/import/upload-button.scss
@@ -1,13 +1,14 @@
-.upload-input {
+.upload-button {
   position: relative;
 
   &__input {
     position: absolute;
     top: 0;
     left: 0;
-    width: 1px;
-    height: 1px;
+    width: 100%;
+    height: 100%;
     opacity: 0;
+    box-sizing: border-box;
   }
 
   &__label {
@@ -21,6 +22,7 @@
   &__text {
     position: relative;
     display: block;
+    padding-right: 28px;
     @include font-size-default(14);
 
     &::before {
