--- a/src/assets/scss/components/ui/imageData/ColorChip.scss
+++ b/src/assets/scss/components/ui/imageData/ColorChip.scss
@@ -1,7 +1,8 @@
 .color-chip {
+  position: relative;
   display: block;
-  width: 48px;
-  height: 48px;
+  width: 52px;
+  height: 52px;
   box-sizing: border-box;
   border-radius: 8px;
   overflow: hidden;
@@ -69,21 +70,13 @@
     }
   }
 
-  &--type {
-    &-input {
-      .color-chip__inner,
-      .color-chip__inner:empty {
-        &::before {
-          content: '';
-          width: 40px;
-          height: 40px;
-          margin-top: -20px;
-          margin-left: -20px;
-          background: url('/src/assets/images/icon/input.svg') no-repeat 50% 50%/
-            100% 100%;
-          transform: none;
-        }
-      }
-    }
+  &__icon {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    display: block;
+    width: 40px;
+    height: 40px;
+    margin: -20px 0 0 -20px;
   }
 }
