--- a/src/assets/scss/views/auto/LayerAutoEstimateLease.scss
+++ b/src/assets/scss/views/auto/LayerAutoEstimateLease.scss
@@ -1,52 +1,3 @@
+@import '@/assets/scss/components/import/car-info.scss';
 @import '@/assets/scss/components/import/basic-list.scss';
 @import '@/assets/scss/components/import/notice-section.scss';
-
-.contents {
-  padding-top: 123px;
-  box-sizing: border-box;
-}
-
-.header {
-  position: absolute;
-  z-index: 15;
-  top: 20px;
-  left: 0;
-  right: 0;
-
-  &__opener {
-    width: 14px;
-    height: 14px;
-
-    &::before {
-      padding: 0;
-      top: 0;
-      left: 0;
-    }
-  }
-}
-
-.inner {
-  padding: 0 20px;
-  box-sizing: border-box;
-}
-
-.detail-contents {
-  position: relative;
-  margin-top: 20px;
-  padding: 20px;
-  background-color: $color-white;
-  border-radius: 0px 0px 20px 20px;
-  box-shadow: 0px 4px 4px rgba($color-black, 0.08);
-  box-sizing: border-box;
-
-  &::before {
-    content: '';
-    position: absolute;
-    z-index: 1;
-    top: 0;
-    left: 20px;
-    right: 20px;
-    height: 1px;
-    background-color: $color-gray-20;
-  }
-}
