--- a/src/assets/scss/views/auto/LayerAutoEstimateSearchCar.scss
+++ b/src/assets/scss/views/auto/LayerAutoEstimateSearchCar.scss
@@ -1,3 +1,30 @@
-@import '@/assets/scss/components/import/basic-list.scss';
 @import '@/assets/scss/components/import/empty.scss';
 @import '@/assets/scss/components/import/search-list.scss';
+
+.head {
+  padding-top: 14px;
+  padding-bottom: 7px;
+  min-height: 0;
+
+  &__left,
+  &__right {
+    flex: none;
+  }
+
+  &__center {
+    flex: 1;
+    min-width: 0;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  &__form {
+    flex: 1;
+    min-width: 0;
+  }
+
+  &__input {
+    @include font-size-default(16);
+    height: #{$line-height-default}em;
+  }
+}
