--- a/src/assets/scss/components/import/board-detail.scss
+++ b/src/assets/scss/components/import/board-detail.scss
@@ -1,7 +1,8 @@
 .board-detail {
+  flex: 1;
   display: flex;
   flex-direction: column;
-  height: 100%;
+  align-items: stretch;
 
   &__head {
     flex: none;
@@ -29,7 +30,6 @@
 
   &__contents {
     flex: 1;
-    min-height: 0;
 
     &::before,
     &::after {
