--- a/src/assets/scss/components/import/bill-list.scss
+++ b/src/assets/scss/components/import/bill-list.scss
@@ -47,27 +47,49 @@
   &__contents {
     display: flex;
 
-    &-left + &-right {
-      margin-left: auto;
+    & + & {
+      margin-top: 2px;
     }
 
-    &-list {
-      @include reset-list;
+    &-left,
+    &-right {
+      flex: 1;
+      min-width: 0;
     }
+
+    &-right {
+      text-align: right;
+
+      .bill-list__sub-item {
+        justify-content: flex-end;
+      }
+    }
+  }
+
+  &__sub {
+    margin: 0;
+    padding: 0;
 
     &-item {
       display: flex;
       @include font-size-default(13);
       color: $color-gray-80;
       font-weight: 300;
+
+      & + & {
+        margin-top: 2px;
+      }
     }
 
-    &-item + &-item {
-      margin-top: 2px;
+    &-key {
+      flex: none;
+      margin-right: 4px;
     }
 
-    &-key + &-value {
-      margin-left: 4px;
+    &-value {
+      flex: 0 1 auto;
+      min-width: 0;
+      margin: 0;
     }
   }
 }
