--- a/src/assets/scss/views/company/CompanyRecruitGuide.scss
+++ b/src/assets/scss/views/company/CompanyRecruitGuide.scss
@@ -8,14 +8,48 @@
 }
 
 .grid-list {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 12px;
+  &::before {
+    content: '';
+    display: table;
+  }
+
+  &__inner {
+    @include reset-list;
+    margin: -12px 0 0 -12px;
+    display: flex;
+    flex-wrap: wrap;
+  }
 
   &__item {
+    width: 50%;
+    padding: 12px 0 0 12px;
+    box-sizing: border-box;
+
     &--full {
-      grid-column-start: 1;
-      grid-column-end: 3;
+      width: 100%;
+    }
+  }
+}
+
+.grid-basic-list {
+  &::before {
+    content: '';
+    display: table;
+  }
+
+  .basic-list {
+    margin: -4px 0 0 -4px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .basic-list__item {
+    width: 50%;
+    padding: 4px 0 0 4px;
+    box-sizing: border-box;
+
+    & + .basic-list__item {
+      margin: 0;
     }
   }
 }
