--- a/src/assets/scss/views/auto/LayerAutoEstimateSearchCar.scss
+++ b/src/assets/scss/views/auto/LayerAutoEstimateSearchCar.scss
@@ -1,5 +1,6 @@
 @import '@/assets/scss/components/import/empty.scss';
 @import '@/assets/scss/components/import/search-list.scss';
+@import '@/assets/scss/components/import/bank-brand.scss';
 
 .head {
   padding-top: 14px;
