영업용(설비리스) > 설비리스 > 견적 계산기 작업 진행중

--- a/src/assets/scss/views/uiGuide/GuideComponentModule.scss
+++ b/src/assets/scss/views/uiGuide/GuideComponentModule.scss
@@ -36,3 +36,4 @@
 @import '@/assets/scss/components/import/car-info.scss';
 @import '@/assets/scss/components/import/qna.scss';
 @import '@/assets/scss/components/import/check-list.scss';
+@import '@/assets/scss/components/import/estimate-list.scss';
