BoxCheck 컴포넌트 size props 추가

--- a/src/assets/scss/components/ui/form/BoxCheck.scss
+++ b/src/assets/scss/components/ui/form/BoxCheck.scss
@@ -289,4 +289,24 @@
       }
     }
   }
+
+  &--size {
+    &-small {
+      .box-check__block {
+        padding: 7px 11px;
+      }
+
+      .box-check__input {
+        &:checked {
+          & + .box-check__block {
+            padding: 6px 10px;
+          }
+        }
+      }
+
+      .box-check__label {
+        @include font-size-default(13);
+      }
+    }
+  }
 }
