--- a/src/assets/scss/components/ui/form/BoxCheckList.scss
+++ b/src/assets/scss/components/ui/form/BoxCheckList.scss
@@ -58,6 +58,20 @@
     }
   }
 
+  &--spacing {
+    &-small {
+      .box-check-list {
+        &__list {
+          margin: -6px 0 0 -6px;
+        }
+
+        &__item {
+          padding: 6px 0 0 6px;
+        }
+      }
+    }
+  }
+
   &--col-3 {
     .box-check-list {
       &__item {
@@ -70,6 +84,14 @@
     .box-check-list {
       &__item {
         width: 25%;
+      }
+    }
+  }
+
+  &--col-6 {
+    .box-check-list {
+      &__item {
+        width: 16.666666%;
       }
     }
   }
