--- a/src/assets/scss/views/uiGuide/GuideComponentModule.scss
+++ b/src/assets/scss/views/uiGuide/GuideComponentModule.scss
@@ -12,6 +12,7 @@
 @import '@/assets/scss/components/import/basic-table.scss';
 @import '@/assets/scss/components/import/not-table.scss';
 @import '@/assets/scss/components/import/board.scss';
+@import '@/assets/scss/components/import/board-detail.scss';
 @import '@/assets/scss/components/import/contents-list.scss';
 @import '@/assets/scss/components/import/notice-section.scss';
 @import '@/assets/scss/components/import/switch-list.scss';
