--- a/src/assets/scss/components/import/benefit.scss
+++ b/src/assets/scss/components/import/benefit.scss
@@ -11,22 +11,14 @@
 
   &__block {
     position: relative;
-    border-radius: 8px;
     background-color: $color-navy-05;
     border: 1px solid $color-navy-05;
+    border-radius: 8px;
     box-sizing: border-box;
 
-    &--event {
-      .benefit__sub {
-        display: -webkit-box;
-        -webkit-line-clamp: 2;
-        -webkit-box-orient: vertical;
-      }
-
-      &-end {
-        .benefit__inner {
-          opacity: 0.4;
-        }
+    &--end {
+      .benefit__inner {
+        opacity: 0.4;
       }
     }
 
@@ -36,6 +28,10 @@
 
       .benefit__inner {
         align-items: flex-start;
+      }
+
+      .benefit__right {
+        margin-left: 16px;
       }
 
       .benefit__sub {
@@ -59,16 +55,6 @@
           align-items: center;
           margin: -19px 0 -19px -19px;
           padding: 19px 0 19px 19px;
-
-          .benefit__logo {
-            flex: none;
-          }
-
-          .benefit__info {
-            flex: 1;
-            min-width: 0;
-            margin-left: 16px;
-          }
         }
 
         .benefit__title {
@@ -82,25 +68,7 @@
         position: relative;
         display: flex;
         align-items: center;
-
-        .benefit__download {
-          position: static;
-
-          &:before {
-            content: '';
-            display: block;
-            position: absolute;
-            top: -19px;
-            right: -19px;
-            bottom: -19px;
-            left: -16px;
-            width: auto;
-            height: auto;
-            padding: 0;
-            box-sizing: content-box;
-            background-color: rgba(0, 0, 0, 0);
-          }
-        }
+        margin-left: 16px;
       }
     }
   }
@@ -141,7 +109,6 @@
 
   &__right {
     flex: none;
-    margin-left: 16px;
   }
 
   &__category {
@@ -173,6 +140,9 @@
     color: $color-gray-70;
     overflow: hidden;
     text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
   }
 
   &__date {
@@ -188,18 +158,9 @@
   }
 
   &__icon {
-    width: 86px;
-    height: 60px;
-
-    img {
-      display: block;
-      width: 100%;
-    }
-  }
-
-  &__logo {
-    width: 48px;
-    height: 48px;
+    width: 124px;
+    height: 86px;
+    margin: -16.5px -19px -16.5px 0;
 
     img {
       display: block;
@@ -212,8 +173,44 @@
     height: 72px;
     background-color: $color-gray-20;
     border-radius: 12px;
-    background: url('@/assets/images/_dummy/thumbnail-sample.png') no-repeat 50%
-      50%;
+    background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
+  }
+
+  &__logo {
+    flex: none;
+    width: 48px;
+    height: 48px;
+
+    img {
+      display: block;
+      width: 100%;
+    }
+  }
+
+  &__info {
+    flex: 1;
+    min-width: 0;
+    margin-left: 16px;
+  }
+
+  &__download {
+    position: static;
+
+    &:before {
+      content: '';
+      display: block;
+      position: absolute;
+      top: -19px;
+      right: -19px;
+      bottom: -19px;
+      left: -16px;
+      width: auto;
+      height: auto;
+      padding: 0;
+      box-sizing: content-box;
+      background-color: rgba(0, 0, 0, 0);
+    }
   }
 }
