--- a/src/assets/scss/components/import/estimate-list.scss
+++ b/src/assets/scss/components/import/estimate-list.scss
@@ -20,6 +20,7 @@
   }
 
   &__head {
+    position: relative;
     display: flex;
     padding: 20px;
     box-sizing: border-box;
@@ -43,6 +44,18 @@
 
   &__arrow {
     flex: none;
+
+    .estimate__opener {
+      position: static;
+
+      &::before {
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        padding: 0;
+      }
+    }
   }
 
   &__contents {
