BoxCheck small 타입 minSide props 간격 추가

--- a/src/assets/scss/components/ui/form/BoxCheck.scss
+++ b/src/assets/scss/components/ui/form/BoxCheck.scss
@@ -307,6 +307,22 @@
       .box-check__label {
         @include font-size-default(13);
       }
+
+      &.box-check--min-side {
+        .box-check__block {
+          padding-left: 0px;
+          padding-right: 0px;
+        }
+
+        .box-check__input {
+          &:checked {
+            & + .box-check__block {
+              padding-left: 0px;
+              padding-right: 0px;
+            }
+          }
+        }
+      }
     }
   }
 }
