1차 검수사항 반영 2

--- a/src/assets/scss/views/main/MainProduct.scss
+++ b/src/assets/scss/views/main/MainProduct.scss
@@ -1,6 +1,10 @@
 @import '@/assets/scss/components/import/icon-list.scss';
 @import '@/assets/scss/components/import/empty.scss';
 
+.wrap {
+  padding-top: 0;
+}
+
 .symbol {
   flex: none;
   position: relative;
