--- a/src/assets/scss/components/ui/layer/UiLayer.scss
+++ b/src/assets/scss/components/ui/layer/UiLayer.scss
@@ -58,6 +58,7 @@
     }
 
     &-toast,
+    &-toast-banner,
     &-toast-fix {
       display: flex;
       flex-direction: column;
@@ -89,6 +90,27 @@
       :global(.is-date-picker-animated) & .layer__container {
         transform: none;
         transition: transform 0s !important;
+      }
+    }
+
+    &-banner {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      overflow: hidden;
+      -webkit-overflow-scrolling: auto;
+
+      .layer__container {
+        width: calc(100% - 32px);
+        margin: 0 16px;
+
+        svg {
+          display: block;
+          width: 100%;
+          height: 100%;
+          border-radius: 20px;
+        }
       }
     }
 
