--- a/src/assets/scss/views/main/LayerMainNotice001.scss
+++ b/src/assets/scss/views/main/LayerMainNotice001.scss
@@ -1,4 +1,6 @@
 .swipe-box {
+  border-radius: 20px 20px 0 0;
+  overflow: hidden;
   margin: -8px -20px -16px;
   font-size: 0;
 
@@ -6,23 +8,24 @@
     width: 100%;
     border-radius: 20px 20px 0 0;
   }
-}
-:global .swiper-pagination {
-  text-align: left;
-  bottom: 24px;
-  padding-left: 20px;
-}
 
-:global .swiper-pagination-bullet {
-  width: 6px !important;
-  height: 6px !important;
-  background: $color-gray-50 !important;
-  opacity: 0.5;
-  border-radius: 5px;
-  margin: 0 5px 0 0 !important;
-}
-:global .swiper-pagination-bullet-active {
-  width: 10px !important;
-  background: $color-black !important;
-  opacity: 1;
+  :global .swiper-pagination {
+    text-align: left;
+    bottom: 24px;
+    padding-left: 20px;
+  }
+
+  :global .swiper-pagination-bullet {
+    width: 6px !important;
+    height: 6px !important;
+    background: $color-gray-50 !important;
+    opacity: 0.5;
+    border-radius: 5px;
+    margin: 0 5px 0 0 !important;
+  }
+  :global .swiper-pagination-bullet-active {
+    width: 10px !important;
+    background: $color-black !important;
+    opacity: 1;
+  }
 }
