팝업 2번 높이 추가

--- a/src/assets/scss/views/main/LayerMainNotice002.scss
+++ b/src/assets/scss/views/main/LayerMainNotice002.scss
@@ -1,6 +1,11 @@
 .swipe-box {
   overflow: hidden;
+  height: 400px;
   border-radius: 20px;
+
+  > div {
+    height: 400px;
+  }
 }
 
 .pagination {
