--- a/src/assets/scss/components/import/coupon-detail.scss
+++ b/src/assets/scss/components/import/coupon-detail.scss
@@ -23,12 +23,24 @@
     margin-left: 16px;
   }
 
+  &__brand-logo {
+    display: block;
+    width: 48px;
+    height: 48px;
+
+    img {
+      display: block;
+      width: 100%;
+      height: 100%;
+    }
+  }
+
   &__brand-name {
     margin: 0;
     @include font-size-default(13);
     font-weight: 300;
 
-    & + .board-detail__title {
+    & + .coupon-detail__title {
       margin-top: 2px;
     }
   }
