--- a/src/assets/scss/views/uiGuide/GuideComponentModule.scss
+++ b/src/assets/scss/views/uiGuide/GuideComponentModule.scss
@@ -39,3 +39,4 @@
 @import '@/assets/scss/components/import/check-list.scss';
 @import '@/assets/scss/components/import/estimate-list.scss';
 @import '@/assets/scss/components/import/benefit.scss';
+@import '@/assets/scss/components/import/upload-file.scss';
