--- a/src/assets/scss/components/import/upload-file.scss
+++ b/src/assets/scss/components/import/upload-file.scss
@@ -1,4 +1,6 @@
 .upload-file {
+  display: block;
+
   &__list {
     @include reset-list;
   }
@@ -28,7 +30,7 @@
   &__content {
     flex: 1;
     min-width: 0;
-    margin-top: 7.5px;
+    margin-top: 8px;
 
     & + .upload-file__button {
       margin-left: 12px;
