--- a/src/assets/scss/views/main/MainBenefit.scss
+++ b/src/assets/scss/views/main/MainBenefit.scss
@@ -1,6 +1,14 @@
 @import '@/assets/scss/components/import/empty.scss';
-@import '@/assets/scss/components/import/benefit.scss';
 
-.wrap {
-  padding-top: 0;
+.head {
+  padding: 0 20px;
+}
+
+.nav {
+  margin-bottom: 0;
+}
+
+.category {
+  margin-top: 20px;
+  margin-bottom: 0;
 }
