--- a/src/assets/scss/components/import/coupon-detail.scss
+++ b/src/assets/scss/components/import/coupon-detail.scss
@@ -6,6 +6,7 @@
 
   &__head {
     display: flex;
+    align-items: center;
     flex: none;
     padding-bottom: 20px;
     border-bottom: 1px solid $color-gray-20;
@@ -14,25 +15,12 @@
 
   &__left {
     flex: none;
+    margin-right: 16px;
   }
 
   &__right {
     flex: 1;
     min-width: 0;
-    padding: 1px 0;
-    margin-left: 16px;
-  }
-
-  &__brand-logo {
-    display: block;
-    width: 48px;
-    height: 48px;
-
-    img {
-      display: block;
-      width: 100%;
-      height: 100%;
-    }
   }
 
   &__brand-name {
