--- a/src/assets/scss/components/import/web-viewer.scss
+++ b/src/assets/scss/components/import/web-viewer.scss
@@ -4,10 +4,13 @@
   left: 0;
   right: 0;
   bottom: 0;
+  overflow: auto;
+  -webkit-overflow-scrolling: touch;
 
   iframe {
     width: 100%;
     height: 100%;
     display: block;
+    border: none;
   }
 }
