--- a/src/assets/scss/views/main/MainProduct.scss
+++ b/src/assets/scss/views/main/MainProduct.scss
@@ -1,26 +1,41 @@
 @import '@/assets/scss/components/import/icon-list.scss';
 @import '@/assets/scss/components/import/empty.scss';
 
-.wrap {
-  padding-top: 0;
+.head {
+  padding: 0 20px;
 }
 
-.symbol {
-  flex: none;
-  position: relative;
-  display: block;
-  height: #{$line-height-default}em;
+.nav {
+  margin-bottom: 0;
+}
 
-  &::before {
-    content: '';
+.etc-text {
+  display: flex;
+  align-items: center;
+  @include font-size-default(13);
+  font-weight: 300;
+  color: $color-gray-80;
+  margin-top: 4px;
+
+  &__item {
     display: block;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin: -1px 0 0 -1px;
+  }
+
+  &__dot {
+    margin: 0 4px;
     width: 2px;
     height: 2px;
     border-radius: 50%;
     background-color: $color-gray-80;
+  }
+}
+
+.icon-list {
+  &__block {
+    align-items: flex-start;
+  }
+
+  &__content {
+    margin-top: 2px;
   }
 }
