--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -1,4 +1,5 @@
 @import '@duetds/date-picker/dist/duet/themes/default.css';
+@import 'swiper/css';
 @import '@/assets/fonts/SpoqaHanSansNeo/style.css';
 
 html,
