--- a/src/assets/scss/components/ui/layer/UiLayer.scss
+++ b/src/assets/scss/components/ui/layer/UiLayer.scss
@@ -58,7 +58,6 @@
     }
 
     &-toast,
-    &-toast-banner,
     &-toast-fix {
       display: flex;
       flex-direction: column;
@@ -93,30 +92,16 @@
       }
     }
 
-    &-banner {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: flex-start;
-      overflow: hidden;
-      -webkit-overflow-scrolling: auto;
-
-      .layer__container {
-        width: calc(100% - 32px);
-        margin: 0 16px;
-
-        svg {
-          display: block;
-          width: 100%;
-          height: 100%;
-          border-radius: 20px;
-        }
-      }
-    }
-
     &-toast-fix {
       .layer__container {
         flex: 1;
+      }
+    }
+
+    &-notice {
+      .layer__container {
+        width: 100%;
+        max-width: 328px;
       }
     }
   }
