--- a/src/assets/scss/views/main/LayerMainNotice002.scss
+++ b/src/assets/scss/views/main/LayerMainNotice002.scss
@@ -1,31 +1,78 @@
-.swipe-box {
-  overflow: hidden;
-  height: 400px;
-  border-radius: 20px;
-
-  > div {
-    height: 400px;
-  }
+.layer {
+  padding-top: 60px;
 }
 
-.pagination {
-  bottom: -28px !important;
-  padding-left: 20px;
-  text-align: left !important;
+.bottom {
+  padding: 18px 20px 0;
+  font-size: 0;
+  line-height: 0;
+  text-align: right;
+}
 
-  :global .swiper-pagination-bullet {
-    overflow: hidden;
-    width: 6px !important;
-    height: 6px !important;
-    background: rgba($color-white, 0.3) !important;
-    opacity: 0.5;
-    border-radius: 5px;
-    margin: 0 5px 0 0 !important;
-    text-indent: -10px;
+.close-area {
+  padding-top: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.banner {
+  position: relative;
+
+  &__block {
+    display: block;
+    color: inherit;
+    text-decoration: none;
+    position: relative;
+
+    &::before {
+      content: '';
+      display: block;
+      padding-top: 121.951219%;
+    }
+
+    img {
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
   }
-  :global .swiper-pagination-bullet-active {
-    width: 10px !important;
-    background: $color-white !important;
-    opacity: 1;
+
+  :global(.swiper) {
+    border-radius: 20px;
+    overflow: hidden;
+  }
+
+  :global(.swiper-pagination-bullets) {
+    position: absolute;
+    z-index: 10;
+    top: 100%;
+    left: 20px;
+    margin-top: 21px;
+    font-size: 0;
+    line-height: 0;
+    text-align: center;
+  }
+
+  :global(.swiper-pagination-bullet) {
+    display: inline-block;
+    vertical-align: top;
+    width: 6px;
+    height: 6px;
+    border-radius: 3px;
+    background-color: rgba($color-white, 0.3);
+    transition: width 0.3s, background-color 0.3s;
+
+    & + :global(.swiper-pagination-bullet) {
+      margin-left: 5px;
+    }
+  }
+
+  :global(.swiper-pagination-bullet-active) {
+    width: 10px;
+    background-color: $color-white;
   }
 }
