--- a/src/assets/scss/views/main/MainPush.scss
+++ b/src/assets/scss/views/main/MainPush.scss
@@ -5,18 +5,30 @@
 
   &__list {
     @include reset-list;
+  }
 
-    li {
-      padding: 20px 20px 16px;
+  &__block {
+    position: relative;
+    padding: 16px 20px;
+    display: flex;
+    align-items: flex-start;
+  }
 
-      &.new {
-        background: rgba($color-green-10, 0.2);
+  &__item {
+    &:first-child {
+      .alarm__block {
+        padding-top: 20px;
       }
+    }
+
+    &--new {
+      background: rgba($color-green-10, 0.2);
     }
   }
 
   &__icon {
-    float: left;
+    flex: none;
+    margin-right: 8px;
     width: 24px;
     height: 24px;
 
@@ -28,24 +40,39 @@
   }
 
   &__information {
-    margin-left: 32px;
+    flex: 1;
+    min-width: 0;
   }
 
   &__title {
-    margin: 0;
+    margin: 0 0 4px;
     color: $color-gray-70;
     font-weight: 500;
     @include font-size-default(12);
   }
 
   &__text {
+    margin: 0;
     font-weight: 400;
     @include font-size-default(13);
   }
 
   &__date {
+    margin: 4px 0 0;
     color: $color-gray-60;
     font-weight: 300;
     @include font-size-default(11);
+  }
+
+  &__link {
+    @include reset-button;
+    display: block;
+    position: absolute;
+    z-index: 10;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
   }
 }
