기타 추가 화면 작업 및 메인 화면 작업중

--- a/src/assets/scss/components/ui/common/BasicBox.scss
+++ b/src/assets/scss/components/ui/common/BasicBox.scss
@@ -35,5 +35,23 @@
     &-septenary {
       padding: 11px 15px;
     }
+
+    &-octonary {
+      border-radius: 12px;
+      border-color: $color-white;
+      background-color: $color-white;
+    }
+
+    &-nonary {
+      border-radius: 12px;
+      border-color: $color-blue-50;
+      background-color: $color-blue-50;
+    }
+
+    &-denary {
+      border-radius: 12px;
+      border-color: $color-green-50;
+      background-color: $color-green-50;
+    }
   }
 }
