--- a/src/assets/scss/components/ui/common/IllustObject.scss
+++ b/src/assets/scss/components/ui/common/IllustObject.scss
@@ -30,5 +30,8 @@
     &-appfree {
       background-image: url('@/assets/images/illustration/img-appfree.png');
     }
+    &-capital {
+      background-image: url('@/assets/images/illustration/img-logo.png');
+    }
   }
 }
