--- a/src/assets/scss/components/import/files.scss
+++ b/src/assets/scss/components/import/files.scss
@@ -93,14 +93,18 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-size: cover;
 
     img {
       display: block;
       position: relative;
       width: auto;
       height: auto;
-      max-width: 100%;
-      max-height: 100%;
+      width: 100%;
+      height: 100%;
+      opacity: 0;
     }
 
     &:empty,
@@ -110,8 +114,8 @@
       }
     }
 
-    &:global(.is-error) img {
-      opacity: 0;
+    &:global(.is-error) {
+      background-image: none !important;
     }
   }
 
