--- a/src/assets/scss/components/import/icon-list.scss
+++ b/src/assets/scss/components/import/icon-list.scss
@@ -45,6 +45,10 @@ div.icon-list__block {
       width: 100%;
       height: 100%;
     }
+
+    &--white {
+      background-color: $color-white;
+    }
   }
 
   &__content {
