영업용 (리스/렌트 견적시스템) > 저장.심사 작업

--- a/src/assets/scss/components/import/add-button.scss
+++ b/src/assets/scss/components/import/add-button.scss
@@ -32,5 +32,13 @@
         fill: $color-black;
       }
     }
+
+    &--secondary {
+      svg {
+        * {
+          fill: $color-gray-60;
+        }
+      }
+    }
   }
 }
