메인 페이지 추가 및 레이아웃, 컴포넌트 보완

--- a/src/assets/scss/components/ui/button/RoundButton.scss
+++ b/src/assets/scss/components/ui/button/RoundButton.scss
@@ -69,6 +69,22 @@
     margin-right: -4px;
   }
 
+  &--theme {
+    &-secondary {
+      color: $color-white;
+      border-color: $color-green-50;
+      background-color: $color-green-50;
+
+      .button__icon {
+        svg {
+          * {
+            fill: $color-white;
+          }
+        }
+      }
+    }
+  }
+
   &[disabled],
   &--disabled,
   &[disabled]:hover,
