--- a/src/assets/scss/components/ui/button/TextButton.scss
+++ b/src/assets/scss/components/ui/button/TextButton.scss
@@ -73,6 +73,16 @@
   }
 
   &--icon {
+    &-small {
+      .button__icon {
+        width: 12px;
+        height: 12px;
+      }
+      .button__icon + .button__text,
+      .button__text + .button__icon {
+        margin-left: 0;
+      }
+    }
     &-regular {
       .button__icon {
         width: 18px;
@@ -136,5 +146,9 @@
 
   &:global(.color-gray) {
     @include button-theme($color-gray-70);
+  }
+
+  &:global(.color-green) {
+    @include button-theme($color-green-50);
   }
 }
