--- a/src/assets/scss/layouts/DefaultFooter.scss
+++ b/src/assets/scss/layouts/DefaultFooter.scss
@@ -1,9 +1,117 @@
 .footer {
-  padding: 30px;
-  background-color: #e1e1e1;
+  padding: 0 20px 30px;
+
+  &::before {
+    content: '';
+    display: block;
+    height: 1px;
+    background-color: $color-gray-30;
+    margin-bottom: 24px;
+  }
 }
-.logo {
-  margin: 0;
-  text-align: center;
-  @include font-size-default(20);
+
+.nav {
+  @include reset-list;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 0 0 -15px;
+
+  &__item {
+    flex: none;
+    box-sizing: border-box;
+    padding-left: 15px;
+
+    &--emphasis {
+      .nav__link {
+        font-weight: 500;
+        color: $color-black;
+      }
+    }
+  }
+
+  &__link {
+    @include reset-button;
+    display: block;
+    text-decoration: none;
+    color: $color-gray-50;
+    @include font-size-default(12);
+  }
+}
+
+.info {
+  margin: 16px 0 0;
+  padding: 0;
+  @include font-size-default(12);
+  font-weight: 500;
+  color: $color-gray-70;
+
+  &__item {
+    display: flex;
+
+    & + & {
+      margin-top: 4px;
+    }
+  }
+
+  &__key {
+    flex: none;
+    width: 66px;
+    margin-right: 8px;
+  }
+
+  &__val {
+    margin: 0;
+    flex: 1;
+    min-width: 0;
+  }
+}
+
+.address {
+  display: block;
+  margin: 16px 0 0;
+  font-style: normal;
+  @include font-size-default(11);
+  font-weight: 300;
+  color: $color-gray-70;
+}
+
+.bin {
+  margin: 2px 0 0;
+  @include font-size-default(11);
+  font-weight: 300;
+  color: $color-gray-70;
+}
+
+.copy {
+  display: block;
+  margin: 16px 0 0;
+  font-style: normal;
+  @include font-size-default(11);
+  font-weight: 300;
+  color: $color-gray-50;
+}
+
+.sns {
+  @include reset-list;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 16px 0 0 -16px;
+
+  &__item {
+    flex: none;
+    box-sizing: border-box;
+    padding-left: 16px;
+  }
+
+  &__link {
+    @include reset-button;
+    display: block;
+    text-decoration: none;
+  }
+
+  &__icon {
+    display: block;
+    width: 28px;
+    height: 28px;
+  }
 }
