--- a/src/assets/scss/views/main/MainHome.scss
+++ b/src/assets/scss/views/main/MainHome.scss
@@ -6,6 +6,13 @@
 
 .body {
   padding-top: 0;
+
+  &--app {
+    &,
+    &:last-child {
+      padding-bottom: 10px;
+    }
+  }
 }
 
 .progress {
@@ -266,4 +273,164 @@
 .hr {
   margin-top: 8px;
   margin-bottom: 40px;
+}
+
+.fun {
+  padding: 24px;
+  border-radius: 12px;
+  background-color: $color-white;
+
+  &__head {
+    display: flex;
+    align-items: center;
+    margin-bottom: 24px;
+
+    &-left {
+      flex: 1;
+      min-width: 0;
+    }
+
+    &-right {
+      flex: none;
+      margin-left: 12px;
+    }
+
+    &-title {
+      margin: 0;
+      @include font-size-head(18);
+    }
+  }
+
+  &__contents {
+    &::before {
+      content: '';
+      display: table;
+    }
+  }
+
+  &__list {
+    @include reset-list;
+    display: flex;
+    flex-wrap: wrap;
+    margin: -12px 0 0 -24px;
+  }
+
+  &__item {
+    flex: none;
+    box-sizing: border-box;
+    width: 50%;
+    padding: 12px 0 0 24px;
+  }
+
+  &__block {
+    display: block;
+    text-decoration: none;
+    color: inherit;
+  }
+
+  &__thumb {
+    display: block;
+    margin-bottom: 20px;
+    position: relative;
+    border-radius: 12px;
+    background: no-repeat 50% 50% / cover;
+
+    &::before {
+      content: '';
+      display: block;
+      padding-top: 100%;
+    }
+
+    img {
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      opacity: 0;
+    }
+  }
+
+  &__sub {
+    display: block;
+    @include font-size-default(13);
+    color: $color-gray-70;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+  &__title {
+    display: block;
+    @include font-size-default(16);
+    font-weight: 500;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+}
+
+.app {
+  text-align: center;
+
+  &__icon {
+    width: 70px;
+    height: 70px;
+    margin: 0 auto 4px;
+
+    svg {
+      display: block;
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  &__title {
+    margin: 0 0 16px;
+    @include font-size-default(14);
+    font-weight: 300;
+  }
+}
+
+.notice {
+  margin-top: 32px;
+
+  &__block {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: inherit;
+    box-sizing: border-box;
+    padding: 12px 15px;
+    border-radius: 8px;
+    border: 1px solid $color-gray-30;
+    background-color: $color-gray-05;
+  }
+
+  &__text {
+    flex: 1;
+    min-width: 0;
+    display: block;
+    @include font-size-default(14);
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+  &__icon {
+    flex: none;
+    display: block;
+    margin-left: 10px;
+
+    svg {
+      display: block;
+      width: 16px;
+      height: 16px;
+
+      * {
+        fill: $color-gray-60;
+      }
+    }
+  }
 }
